--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    
+    <canvas id="game"></canvas>
+    <script src="js/game.js"></script>
 </body>
 </html>
